--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,109 +1,234 @@
-<!--<!DOCTYPE html>-->
-<!--<head>-->
-<!--    &lt;!&ndash; <meta> tags> &ndash;&gt;-->
-<!--    <title>Book Face</title>-->
-<!--&lt;!&ndash;    //&ndash;&gt;-->
-<!--    <link rel="stylesheet" href="bootstrap/css1/bootstrap.min.css1">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">-->
-<!--    <link rel="stylesheet" href="fonts/fontawesome-all.min.css1">-->
-<!--    <link rel="stylesheet" href="fonts/font-awesome.min.css1">-->
-<!--    <link rel="stylesheet" href="fonts/fontawesome5-overrides.min.css1">-->
-<!--    <link rel="stylesheet" href="css1/styles.min.css1">-->
-<!--    <link rel="stylesheet" href="css1/infopatien.css1">-->
-<!--    &lt;!&ndash;===============================================================================================&ndash;&gt;-->
-<!--    <link rel="stylesheet" type="text/css1" href="vendor/bootstrap/css1/bootstrap.min.css1">-->
-<!--    &lt;!&ndash;===============================================================================================&ndash;&gt;-->
-<!--    <link rel="stylesheet" type="text/css1" href="fonts/font-awesome-4.7.0/css1/font-awesome.min.css1">-->
-<!--    &lt;!&ndash;===============================================================================================&ndash;&gt;-->
-<!--    <link rel="stylesheet" type="text/css1" href="vendor/animate/animate.css1">-->
-<!--    &lt;!&ndash;===============================================================================================&ndash;&gt;-->
-<!--    <link rel="stylesheet" type="text/css1" href="vendor/select2/select2.min.css1">-->
-<!--    &lt;!&ndash;===============================================================================================&ndash;&gt;-->
-<!--    <link rel="stylesheet" type="text/css1" href="vendor/perfect-scrollbar/perfect-scrollbar.css1">-->
-<!--    &lt;!&ndash;===============================================================================================&ndash;&gt;-->
-<!--    <link rel="stylesheet" type="text/css1" href="css1/util.css1">-->
-<!--    <link rel="stylesheet" type="text/css1" href="css1/main.css1">-->
-<!--    <link rel="stylesheet" type="text/css1" href="css1/styles.css1">-->
-<!--    <link rel="stylesheet" type="text/css1" href="css1/Ludens-Users---2-Register.css1">-->
-
-<!--    &lt;!&ndash; Icons font CSS&ndash;&gt;-->
-<!--    <link href="vendor/mdi-font/css1/material-design-iconic-font.min.css1" rel="stylesheet" media="all">-->
-<!--    <link href="vendor/font-awesome-4.7/css1/font-awesome.min.css1" rel="stylesheet" media="all">-->
-<!--    &lt;!&ndash; Font special for pages&ndash;&gt;-->
-<!--    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">-->
-
-<!--    &lt;!&ndash; Vendor CSS&ndash;&gt;-->
-<!--    <link href="vendor/select2/select2.min.css1" rel="stylesheet" media="all">-->
-<!--    <link href="vendor/datepicker/daterangepicker.css1" rel="stylesheet" media="all">-->
-
-<!--    &lt;!&ndash; Main CSS&ndash;&gt;-->
-<!--    <link href="css1/main1.css1" rel="stylesheet" media="all">-->
-
-<!--    <link rel="stylesheet" href="fonts/fontawesome-all.min.css1">-->
-<!--    <link rel="stylesheet" href="fonts/font-awesome.min.css1">-->
-<!--    <link rel="stylesheet" href="fonts/fontawesome5-overrides.min.css1">-->
-<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">-->
-<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">-->
-<!--    <link rel="stylesheet" href="css1/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.css1">-->
-<!--    <style>-->
-
-<!--    </style>-->
-<!--&lt;!&ndash;    <link rel="stylesheet" href="css1/styles1.css1">&ndash;&gt;-->
-
-<!--&lt;!&ndash;    <link rel="stylesheet" href="css1/bootstrap.min.css1">&ndash;&gt;-->
-<!--&lt;!&ndash;    <link rel="stylesheet" href="material-icons.min.css1">&ndash;&gt;-->
-<!--&lt;!&ndash;    <link rel="stylesheet" href="Profile-with-data-and-skills.css1">&ndash;&gt;-->
-<!--&lt;!&ndash;    <link rel="stylesheet" href="styles.css1">&ndash;&gt;-->
-<!--</head>-->
-
-
-<!--<body>-->
-<!--<div id="wrapper">-->
-
-<!--</div>-->
-<!--&lt;!&ndash;//&ndash;&gt;-->
-<!--<script src="bootstrap/js1/bootstrap.min.js1"></script>-->
-<!--<script src="js1/chart.min.js1"></script>-->
-<!--<script src="js1/script.min.js1"></script>-->
-<!--&lt;!&ndash;===============================================================================================&ndash;&gt;-->
-<!--<script src="/publicvendor/jquery/jquery-3.2.1.min.js1"></script>-->
-<!--&lt;!&ndash;===============================================================================================&ndash;&gt;-->
-<!--<script src="public/vendor/bootstrap/js1/popper.js1"></script>-->
-<!--<script src="public/vendor/bootstrap/js1/bootstrap.min.js1"></script>-->
-<!--&lt;!&ndash;===============================================================================================&ndash;&gt;-->
-<!--<script src="public/vendor/select2/select2.min.js1"></script>-->
-<!--&lt;!&ndash;===============================================================================================&ndash;&gt;-->
-<!--<script src="js1/main.js1"></script>-->
-<!--&lt;!&ndash; Jquery JS&ndash;&gt;-->
-<!--<script src="vendor/jquery/jquery.min.js1"></script>-->
-<!--&lt;!&ndash; Vendor JS&ndash;&gt;-->
-<!--<script src="vendor/select2/select2.min.js1"></script>-->
-<!--<script src="vendor/datepicker/moment.min.js1"></script>-->
-<!--<script src="vendor/datepicker/daterangepicker.js1"></script>-->
-
-<!--&lt;!&ndash; Main JS&ndash;&gt;-->
-<!--<script src="js1/global.js1"></script>-->
-<!--<script src="bootstrap/js1/bootstrap.min.js1"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/jquery.tablesorter.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-filter.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-storage.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>-->
-<!--<script src="js1/Ludens---1-Index-Table-with-Search--Sort-Filters-v20-1.js1"></script>-->
-<!--<script src="js1/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.js1"></script>-->
-
-<!--</body>-->
-<!--</html>-->
-
 <!DOCTYPE html>
-<head>
-    <title>CMS QUẢN LÝ BỆNH NHÂN</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<html lang="en">
 
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>Dashboard - NiceAdmin Bootstrap Template</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <!-- Favicons -->
+    link href="assets/img/favicon.png" rel="icon">
+    <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="vendor/quill/quill.snow.css" rel="stylesheet">
+    <link href="vendor/quill/quill.bubble.css" rel="stylesheet">
+    <link href="vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="vendor/simple-datatables/style.css" rel="stylesheet">
+
+    <!-- Template Main CSS File -->
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- =======================================================
+    * Template Name: NiceAdmin - v2.2.0
+    * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
+    * Author: BootstrapMade.com
+    * License: https://bootstrapmade.com/license/
+    ======================================================== -->
 </head>
+
 <body>
+<aside id="sidebar" class="sidebar">
+
+    <ul class="sidebar-nav" id="sidebar-nav">
+
+        <li class="nav-item">
+            <a class="nav-link " href="/">
+                <i class="bi bi-grid"></i>
+                <span>Dashboard</span>
+            </a>
+        </li><!-- End Dashboard Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-menu-button-wide"></i><span>Bệnh Nhân</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <li>
+                    <a href="/list-patients">
+                        <i class="bi bi-circle"></i><span>Danh Sách Bệnh Nhân</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="components-accordion.html">
+                        <i class="bi bi-circle"></i><span>Thêm Bệnh Nhân</span>
+                    </a>
+                </li>
+
+            </ul>
+        </li><!-- End Components Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-journal-text"></i><span>Forms</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <li>
+                    <a href="forms-elements.html">
+                        <i class="bi bi-circle"></i><span>Form Elements</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="forms-layouts.html">
+                        <i class="bi bi-circle"></i><span>Form Layouts</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="forms-editors.html">
+                        <i class="bi bi-circle"></i><span>Form Editors</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="forms-validation.html">
+                        <i class="bi bi-circle"></i><span>Form Validation</span>
+                    </a>
+                </li>
+            </ul>
+        </li><!-- End Forms Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-layout-text-window-reverse"></i><span>Tables</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <li>
+                    <a href="tables-general.html">
+                        <i class="bi bi-circle"></i><span>General Tables</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="tables-data.html">
+                        <i class="bi bi-circle"></i><span>Data Tables</span>
+                    </a>
+                </li>
+            </ul>
+        </li><!-- End Tables Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-bar-chart"></i><span>Charts</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <li>
+                    <a href="charts-chartjs.html">
+                        <i class="bi bi-circle"></i><span>Chart.js</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="charts-apexcharts.html">
+                        <i class="bi bi-circle"></i><span>ApexCharts</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="charts-echarts.html">
+                        <i class="bi bi-circle"></i><span>ECharts</span>
+                    </a>
+                </li>
+            </ul>
+        </li><!-- End Charts Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#icons-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-gem"></i><span>Icons</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="icons-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <li>
+                    <a href="icons-bootstrap.html">
+                        <i class="bi bi-circle"></i><span>Bootstrap Icons</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="icons-remix.html">
+                        <i class="bi bi-circle"></i><span>Remix Icons</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="icons-boxicons.html">
+                        <i class="bi bi-circle"></i><span>Boxicons</span>
+                    </a>
+                </li>
+            </ul>
+        </li><!-- End Icons Nav -->
+
+        <li class="nav-heading">Pages</li>
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="users-profile.html">
+                <i class="bi bi-person"></i>
+                <span>Profile</span>
+            </a>
+        </li><!-- End Profile Page Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="pages-faq.html">
+                <i class="bi bi-question-circle"></i>
+                <span>F.A.Q</span>
+            </a>
+        </li><!-- End F.A.Q Page Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="pages-contact.html">
+                <i class="bi bi-envelope"></i>
+                <span>Contact</span>
+            </a>
+        </li><!-- End Contact Page Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="pages-register.html">
+                <i class="bi bi-card-list"></i>
+                <span>Register</span>
+            </a>
+        </li><!-- End Register Page Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="pages-login.html">
+                <i class="bi bi-box-arrow-in-right"></i>
+                <span>Login</span>
+            </a>
+        </li><!-- End Login Page Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="pages-error-404.html">
+                <i class="bi bi-dash-circle"></i>
+                <span>Error 404</span>
+            </a>
+        </li><!-- End Error 404 Page Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="pages-blank.html">
+                <i class="bi bi-file-earmark"></i>
+                <span>Blank</span>
+            </a>
+        </li><!-- End Blank Page Nav -->
+
+    </ul>
+
+</aside>
 {{{body}}}
 
+<!-- Vendor JS Files -->
+<script src="vendor/apexcharts/apexcharts.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="vendor/chart.js/chart.min.js"></script>
+<script src="vendor/echarts/echarts.min.js"></script>
+<script src="vendor/quill/quill.min.js"></script>
+<script src="vendor/simple-datatables/simple-datatables.js"></script>
+<script src="vendor/tinymce/tinymce.min.js"></script>
+<script src="vendor/php-email-form/validate.js"></script>
+
+<!-- Template Main JS File -->
+<script src="js/main.js"></script>
+
 </body>
+
 </html>
