--- a/views/listDoctor.hbs
+++ b/views/listDoctor.hbs
@@ -1,175 +1,4 @@
 
-<!--<!doctype html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <title>CMS QUẢN LÝ BỆNH NHÂN</title>-->
-<!--    <meta charset="utf-8">-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
-
-<!--    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">-->
-
-<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
-<!--    <link rel="stylesheet" href="css/style.css">-->
-
-<!--    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">-->
-<!--    <link rel="stylesheet" href="fonts/fontawesome-all.min.css">-->
-<!--    <link rel="stylesheet" href="fonts/font-awesome.min.css">-->
-<!--    <link rel="stylesheet" href="fonts/fontawesome5-overrides.min.css">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">-->
-<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">-->
-<!--    <link rel="stylesheet" href="css/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.css">-->
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"-->
-<!--          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
-<!--</head>-->
-<!--<body>-->
-
-<!--<div class="wrapper d-flex align-items-stretch">-->
-<!--    <nav id="sidebar">-->
-<!--        <div class="custom-menu">-->
-<!--            <button type="button" id="sidebarCollapse" class="btn btn-primary">-->
-<!--                <i class="fa fa-bars"></i>-->
-<!--                <span class="sr-only">Toggle Menu</span>-->
-<!--            </button>-->
-<!--        </div>-->
-<!--        <div class="p-4 pt-5">-->
-<!--            <h1><a href="index.html" class="logo">Xin chào</a></h1>-->
-<!--            <ul class="list-unstyled components mb-5">-->
-<!--                <li class="active">-->
-<!--                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Bệnh-->
-<!--                        nhân</a>-->
-<!--                    <ul class="collapse list-unstyled" id="homeSubmenu">-->
-<!--                        <li>-->
-<!--                            <a href="/list-patients">Danh Sách Bệnh Nhân</a>-->
-<!--                        </li>-->
-<!--                        <li>-->
-<!--                            <a href="/add-patient">Thêm Bệnh Nhân</a>-->
-<!--                        </li>-->
-<!--                    </ul>-->
-<!--                </li>-->
-<!--                <li>-->
-<!--                    <a href="/list">Danh Sách Bác Sĩ</a>-->
-<!--                </li>-->
-<!--                <li>-->
-<!--                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"-->
-<!--                       class="dropdown-toggle">Pages</a>-->
-<!--                    <ul class="collapse list-unstyled" id="pageSubmenu">-->
-<!--                        <li>-->
-<!--                            <a href="">Page 1</a>-->
-<!--                        </li>-->
-<!--                        <li>-->
-<!--                            <a href="#">Page 2</a>-->
-<!--                        </li>-->
-<!--                        <li>-->
-<!--                            <a href="#">Page 3</a>-->
-<!--                        </li>-->
-<!--                    </ul>-->
-<!--                </li>-->
-<!--                <li>-->
-<!--                    <a href="/login">Đăng Xuất</a>-->
-<!--                </li>-->
-<!--                <li>-->
-<!--                    <a href="#">Phản Hồi</a>-->
-<!--                </li>-->
-<!--            </ul>-->
-
-<!--            <div class="mb-5">-->
-<!--                <h3 class="h6">Subscribe for newsletter</h3>-->
-<!--                <form action="#" class="colorlib-subscribe-form">-->
-<!--                    <div class="form-group d-flex">-->
-<!--                        <div class="icon"><span class="icon-paper-plane"></span></div>-->
-<!--                        <input type="text" class="form-control" placeholder="Enter Email Address">-->
-<!--                    </div>-->
-<!--                </form>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </nav>-->
-
-<!--    &lt;!&ndash; Page Content  &ndash;&gt;-->
-<!--    <div id="content" class="p-4 p-md-5 pt-5">-->
-<!--        <div class="container-fluid">-->
-<!--            <div class="card" id="TableSorterCard">-->
-<!--                <div class="card-header py-2">-->
-<!--                    <div class="row table-topper align-items-center">-->
-<!--                        <div class="col-12 col-sm-5 col-md-6 text-start" style="margin: 0px;padding: 5px 15px;">-->
-<!--                            <p class="text-primary m-0 fw-bold">Danh sách bác sĩ</p>-->
-<!--                        </div>-->
-<!--                        <div class="col-12 col-sm-7 col-md-6 text-end" style="margin: 0px;padding: 5px 15px;">-->
-<!--                            <button class="btn btn-primary btn-sm reset" type="button" style="margin: 2px;">Tùy Chỉnh-->
-<!--                            </button>-->
-<!--                            <button class="btn btn-warning btn-sm" id="zoom_in" type="button"-->
-<!--                                    zoomclick="ChangeZoomLevel(-10);"-->
-<!--                                    style="margin: 2px;"><i class="fa fa-search-plus"></i></button>-->
-<!--                            <button class="btn btn-warning btn-sm" id="zoom_out" type="button"-->
-<!--                                    zoomclick="ChangeZoomLevel(-10);"-->
-<!--                                    style="margin: 2px;"><i class="fa fa-search-minus"></i></button>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="row">-->
-<!--                    <div class="col-12">-->
-<!--                        <div class="table-responsive">-->
-<!--                            <table class="table table-striped table tablesorter" id="ipi-table">-->
-<!--                                <thead class="thead-dark">-->
-
-<!--                                <tr>-->
-<!--                                    <th class="column1">Ảnh</th>-->
-<!--                                    <th class="column2">ID</th>-->
-<!--                                    <th class="column2">Họ Và Tên</th>-->
-<!--                                    <th class="column3">UserName</th>-->
-<!--                                    <th class="column4">PassWord</th>-->
-<!--                                    <th class="column5">Trạng Thái</th>-->
-<!--                                </tr>-->
-<!--                                </thead>-->
-<!--                                {{#each docs}}-->
-<!--                                    <tbody>-->
-
-<!--                                    <tr>-->
-<!--                                        <td class="column1"><img class="rounded-circle me-2" width="30" height="30"-->
-<!--                                                                 src="img/avatars/avatar{{this.id}}.jpeg"/></td>-->
-<!--                                        <td class="column2">{{this.id}}</td>-->
-<!--                                        <td class="column3">{{this.name}}</td>-->
-<!--                                        <td class="column4">{{this.username}}</td>-->
-<!--                                        <td class="column5">{{this.password}}</td>-->
-<!--                                        {{#if this.state}}-->
-<!--                                            <td><a href="#" class="btn btn-success">{{this.state}}</a></td>-->
-<!--                                        {{else}}-->
-<!--                                            <td><a href="#" class="btn btn-danger">{{this.state}}</a></td>{{/if}}-->
-
-<!--                                    </tr>-->
-<!--                                    </tbody>-->
-<!--                                {{/each}}-->
-<!--                            </table>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"-->
-<!--        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"-->
-<!--        crossorigin="anonymous"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"-->
-<!--        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"-->
-<!--        crossorigin="anonymous"></script>-->
-<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"-->
-<!--        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"-->
-<!--        crossorigin="anonymous"></script>-->
-<!--<script src="bootstrap/js/bootstrap.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/jquery.tablesorter.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-filter.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-storage.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>-->
-<!--<script src="js/Ludens---1-Index-Table-with-Search--Sort-Filters-v20-1.js"></script>-->
-<!--<script src="js/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.js"></script>-->
-<!--&lt;!&ndash;<script src="js/jquery.min.js"></script>&ndash;&gt;-->
-<!--<script src="js/popper.js"></script>-->
-<!--<script src="js/bootstrap.min.js"></script>-->
-<!--<script src="js/main.js"></script>-->
-<!--</body>-->
-<!--</html>-->
-<!-- ======= Header ======= -->
 <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
@@ -399,7 +228,86 @@
 </header><!-- End Header -->
 
 <!-- ======= Sidebar ======= -->
+<aside id="sidebar" class="sidebar">
 
+    <ul class="sidebar-nav" id="sidebar-nav">
+
+        <li class="nav-item">
+            <a class="nav-link " href="/dashboard">
+                <i class="bi bi-grid"></i>
+                <span>Dashboard</span>
+            </a>
+        </li><!-- End Dashboard Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-menu-button-wide"></i><span>Bệnh Nhân</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <li>
+                    <a href="/list-patients">
+                        <i class="bi bi-circle"></i><span>Danh Sách Bệnh Nhân</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/add-patient">
+                        <i class="bi bi-circle"></i><span>Thêm Bệnh Nhân</span>
+                    </a>
+                </li>
+
+            </ul>
+        </li><!-- End Components Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-journal-text"></i><span>Bác sĩ</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <li>
+                    <a href="/list">
+                        <i class="bi bi-circle"></i><span>Danh sách bác sĩ</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="forms-layouts.html">
+                        <i class="bi bi-circle"></i><span>Thêm bác sĩ</span>
+                    </a>
+                </li>
+            </ul>
+        </li><!-- End Forms Nav -->
+
+
+
+
+
+
+
+        <li class="nav-heading">Pages</li>
+
+
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="/">
+                <i class="bi bi-question-circle"></i>
+                <span>F.A.Q</span>
+            </a>
+        </li><!-- End F.A.Q Page Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="/contact/to">
+                <i class="bi bi-envelope"></i>
+                <span>Contact</span>
+            </a>
+        </li><!-- End Contact Page Nav -->
+
+
+
+
+
+
+    </ul>
+
+</aside>
 
 <main id="main" class="main">
 
